TrayIcon: Explicitly show/hide the main window if requested

Actually KStatusNotifierItem should handle this, but for some reason
that doesn't work on Wayland, the window isn't opened when the user
clicks on the tray icon or chooses "Restore" from the context menu.
So do it explicitly as a workaround.

BUG: 389663
FIXED-IN: 17.12.2