ui/tray.h
@@ -35,6 +35,7 @@ public:
 
 private slots:
     void slotActivated();
+    void slotRestore(bool active);
 };
 
 #endif
